[package]
name = "gltf_opt"
version = "0.1.0"
edition = "2021"
description = "Optimize glb file by resize it's textures"

[lib]
name = "gltf_opt"

[dependencies]
fast_image_resize = { version = "5.1.0", features = ["image", "rayon"] }
gltf = "1.4.1"
image = { version = "0.25.5", features = ["png", "jpeg", "webp", "rayon"] }
imagesize = "0.14.0"
ktx2-rw = { git = "https://github.com/AllenDang/ktx2-rw" }
num_cpus = "1.16"
