[package]
name = "gltf_opt"
version = "0.1.5"
edition = "2024"
description = "Optimize glb file by resizing textures and adjusting pivot points"
license = "MIT"
repository = "https://github.com/AllenDang/gltf_opt"
keywords = ["gltf", "glb", "optimization", "texture", "3d"]
categories = ["graphics", "game-development"]

[lib]
name = "gltf_opt"

[dependencies]
fast_image_resize = { version = "5.1.0", features = ["image", "rayon"] }
gltf = "1.4.1"
image = { version = "0.25.5", features = ["png", "jpeg", "webp", "rayon"] }
imagesize = "0.14.0"
ktx2-rw = { version = "0.2.4" }
num_cpus = "1.17"
